# Accident-Severity-Prediction

./: .dockerignore  .gitignore  CLEANING_STEPS.md  Dockerfile  FEATURE_SELECTION.md  MODELS.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  streamlit_app.py
.github/workflows/: lint.yml
accident_severity_predictor/: features.py  preprocess.py
accident_severity_predictor/src/: __init__.py
accident_severity_predictor/src/data/: __init__.py
accident_severity_predictor/src/reports_3_4/: validation_report.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: CLEANING_STEPS.md  FEATURE_SELECTION_COMPARISON.md  MODELS.md  TESTING_REPORT.md  mkdocs.yml
docs/docs/: index.md
mlruns 23-21-25-501/0/: meta.yaml
mlruns 23-21-25-501/0/154eeae163414df0b109b01076ff119f/: meta.yaml
mlruns 23-21-25-501/0/18d49ec1d04a407fac09a79fc435d392/: meta.yaml
mlruns 23-21-25-501/0/1ffb05c0ff3b4a6bbf1b6b31d33e616e/: meta.yaml
mlruns 23-21-25-501/0/27c58b164e684c93ad461d1b381b6158/: meta.yaml
mlruns 23-21-25-501/0/2dee058de0c0481281603a13c0d30ebb/: meta.yaml
mlruns 23-21-25-501/0/2e66ccd0cf604ebcb034e4d29cdb4975/: meta.yaml
mlruns 23-21-25-501/0/379332ba6109444491adbcee5bbfa885/: meta.yaml
mlruns 23-21-25-501/0/40414a067667427aafeefe6cc82ff3ea/: meta.yaml
mlruns 23-21-25-501/0/44c178713b9b4bcdb80533ce367f7c32/: meta.yaml
mlruns 23-21-25-501/0/4c9942418ca248d9a9d6cdaef678729f/: meta.yaml
mlruns 23-21-25-501/0/4d9af37444fc43c69dbe33665749d4a5/: meta.yaml
mlruns 23-21-25-501/0/514ebf81a45241a380d387ae1c150ea2/: meta.yaml
mlruns 23-21-25-501/0/53e5ebe163be44318de6fd0cd68a90e1/: meta.yaml
mlruns 23-21-25-501/0/549407da06b04e9abbff1bc556e7f9bc/: meta.yaml
mlruns 23-21-25-501/0/58241add3d364c80859194711d9b61d3/: meta.yaml
mlruns 23-21-25-501/0/72659fcd872148cbb58dd01ef37d7902/: meta.yaml
mlruns 23-21-25-501/0/7384f76593404791b483a2f5ebfe9707/: meta.yaml
mlruns 23-21-25-501/0/74770ba8660341659851f35e4c0bd457/: meta.yaml
mlruns 23-21-25-501/0/7853e8cfd86a4c5388dc9b105e157550/: meta.yaml
mlruns 23-21-25-501/0/7bbceed5bc1946cc99ba99c4b6af897e/: meta.yaml
mlruns 23-21-25-501/0/8256549dfc3f4a34a7177d5c1460165a/: meta.yaml
mlruns 23-21-25-501/0/8b1f919ac7ba452699b0ddd7d1375267/: meta.yaml
mlruns 23-21-25-501/0/9a13a4b6f57d42e6a0bcdf17f6d92e4f/: meta.yaml
mlruns 23-21-25-501/0/9ccc2d00099749219a2738302edd7c4e/: meta.yaml
mlruns 23-21-25-501/0/abf9c4c8544d494598b02bd007a452e4/: meta.yaml
mlruns 23-21-25-501/0/ad25d001a5b04ef7b70caabd6e676375/: meta.yaml
mlruns 23-21-25-501/0/add02e958bcb4e29809c0633b470c1ca/: meta.yaml
mlruns 23-21-25-501/0/aff2a81782e245b88c7434552ffb590d/: meta.yaml
mlruns 23-21-25-501/0/bdeafb3c1cc745309a80424da52cffb0/: meta.yaml
mlruns 23-21-25-501/0/be9ee2f63be048f6bbf924018e01b0e0/: meta.yaml
mlruns 23-21-25-501/0/c4e5f2ef1bb348d58f8830244e4f23f5/: meta.yaml
mlruns 23-21-25-501/0/c7183572b9b44306af86f1acfd0c4677/: meta.yaml
mlruns 23-21-25-501/0/c8e71293985141fca16e92afcee1d97f/: meta.yaml
mlruns 23-21-25-501/0/cafb6989dc0642fd9bcc204c7b62f215/: meta.yaml
mlruns 23-21-25-501/0/d16d519239714d549c988be9feec21df/: meta.yaml
mlruns 23-21-25-501/0/d1b1e71d7da3400eb51c1d5aabf0fa36/: meta.yaml
mlruns 23-21-25-501/0/d75ee822355b42d4a3f9c1d2a3f567a9/: meta.yaml
mlruns 23-21-25-501/0/e2c628446b174d78acfe8d0ea8dbcbba/: meta.yaml
models/: CatboostModel.py  LightGBM.py  LogisticRegression.py  RandomForest.py  __init__.py  baseline.py  catboost_model.py  evaluate.py  logistic_regression.py  random_forest.py  xgboost_model.py
notebooks/: 1-Data-Acquisition.ipynb  2-Data-Cleaning.py  2-Data-Exploration.py  3-Data-Engineering.py  4-Data-Selection.py  5-EDA.py  6-Data-Transformation.py
reports/: coverage.json  preprocessing_report.txt  processed_validation_test.txt  processed_validation_train.txt  processed_validation_val.txt  validation_report.json  validation_summary.txt
reports/mlflow_artifacts/: baseline_constant_slight_classification_report.json  baseline_most_frequent_classification_report.json  baseline_stratified_classification_report.json  catboost_classification_report.json  catboost_report.json  lightgbm_report.json  logistic_regression_classification_report.json  logreg_report.json  random_forest_classification_report.json  rf_report.json  test_integration_run_report.json  test_run_report.json  xgb_report.json  xgboost_classification_report.json
reports/test_results/: all_tests.html  all_tests.json  comprehensive_test_report.json
reports/validation/: validation_report.json
reports_31_3/: preprocessing_report.txt  validation_report.json
scripts/: run_tests.py
src/: evaluate.py  features.py  preprocess.py
src/api/: __init__.py  main.py
src/data/: acquire.py  preprocess.py  validate.py
src/features/: build_features.py
src/models/: evaluate.py  logistic_regression.py  make_val_split.py  train.py  train2.py  tune_Lgmb.py  tune_catboost.py
src/reports/: validation_summary.txt
tests/: __init__.py  conftest.py
tests/test_data/: __init__.py  test_acquire.py  test_preprocess.py  test_preprocess_targeted.py  test_validate.py  test_validate_targeted.py
tests/test_features/: __init__.py  test_feature_engineering.py
tests/test_integration/: __init__.py  test_end_to_end_pipeline.py
tests/test_models/: __init__.py  test_evaluate.py  test_train.py
(+340 files in other folders)
