[tool.poetry]
name = "uk-road-accidents"
version = "0.1.0"
description = "CMPS344 Applied Data Science — UK Road Accident Severity Prediction"
authors = [
    "Team Member 1 <member1@student.cu.edu.eg>",
    "Team Member 2 <member2@student.cu.edu.eg>",
    "Team Member 3 <member3@student.cu.edu.eg>",
    "Team Member 4 <member4@student.cu.edu.eg>",
]
readme = "README.md"
packages = [{ include = "src" }]

# ── Python version ──────────────────────────────────────────────────────────
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core data
pandas        = "^2.2"
numpy         = "^1.26"

# Machine learning
scikit-learn  = "^1.4"
xgboost       = "^2.0"
imbalanced-learn = "^0.12"      # SMOTE

# Experiment tracking
mlflow        = "^2.12"

# Visualisation
matplotlib    = "^3.8"
seaborn       = "^0.13"

# Statistics (used in validation: KS test, skewness, kurtosis, z-score)
scipy         = "^1.12"

# Weather API enrichment
requests      = "^2.31"
python-dotenv = "^1.0"          # loads .env file

# Dashboard (bonus)
streamlit     = "^1.33"

# In the [tool.poetry.dependencies] section, add:
kagglehub        = "^0.2"

# ── Development / testing dependencies ─────────────────────────────────────
ydata-profiling = "^4.18.1"
[tool.poetry.group.dev.dependencies]
pytest        = "^8.1"
pytest-cov    = "^5.0"          # coverage reports
ruff          = "^0.4"          # linting + formatting (replaces flake8 + black)
ipykernel     = "^6.29"         # Jupyter notebooks in VS Code
reportlab     = "^4.0"
# ── Ruff linting config ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort
ignore = ["E501"]               # ignore long lines (handled by line-length)

# ── Pytest config ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths     = ["tests"]
addopts       = "--cov=src --cov-report=term-missing --cov-report=html"
python_files  = "test_*.py"
python_functions = "test_*"

# ── Coverage config ─────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["src"]
omit    = ["tests/*", "src/__init__.py"]

[tool.coverage.report]
fail_under = 70                 # fail CI if coverage drops below 70%

# ── Build system ────────────────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
