[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "team 7" },
]


readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mlflow",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "setuptools (>=70,<81)",
    "imbalanced-learn (>=0.11.0,<1.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "fastparquet (>=2026.3.0,<2027.0.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "kagglehub (>=0.2,<0.3)",
    "meteostat (>=2.1.4,<3.0.0)",
    "protobuf (>=3.20.3,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imblearn (>=0.0,<0.1)",
    "catboost (>=1.2.10,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
]
requires-python = ">=3.11,<4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-html = ">=3.1.1"
pytest-json-report = ">=1.5.0"
pytest-mock = ">=3.10.0"

[tool.ruff]
line-length = 99
src = ["accident_severity_predictor"]
include = ["pyproject.toml", "accident_severity_predictor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["accident_severity_predictor"]
force-sort-within-sections = true

